--- a/src/sass/modules/home/_header.scss
+++ b/src/sass/modules/home/_header.scss
@@ -119,7 +119,7 @@ body{
 /* ------ hero image ------ */
 
 .hero-image{
-    background-image:url('../../../../public/img/bg-header.png');
+    background-image:url('../img/bg-header.png');
     min-height: 100vh;
     background-size: cover;
     background-position: center;
