--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,20 +1,5 @@
-/*--------- colors ----------*/ /*-------- fonts --------*/
+/*--------- colors ----------*/
 @import "../../node_modules/@fortawesome/fontawesome-free/css/all.css";
-@font-face {
-  font-family: "lato";
-  src: url("../../public/fonts/Lato-Light.ttf");
-  font-weight: light;
-}
-@font-face {
-  font-family: "lato";
-  src: url("../../public/fonts/Lato-Regular.ttf");
-  font-weight: normal;
-}
-@font-face {
-  font-family: "lato";
-  src: url("../../public/fonts/Lato-Bold.ttf");
-  font-weight: bold;
-}
 * {
   padding: 0;
   margin: 0;
@@ -130,7 +115,7 @@ body {
 /* ------ end of navbar section ------ */
 /* ------ hero image ------ */
 .hero-image {
-  background-image: url("../../../../public/img/bg-header.png");
+  background-image: url("../img/bg-header.png");
   min-height: 100vh;
   background-size: cover;
   background-position: center;
